# bulked

./: AGENTS.md  Cargo.toml  README.md  plan.bulk-grep.md
.github/workflows/: ci.yml  release.yml
src/: apply.rs  context.rs  execute.rs  format.rs  ingest.rs  integration_tests.rs  lib.rs  main.rs  searcher.rs  types.rs
src/cli/: apply.rs  error.rs  ingest.rs  mod.rs  search.rs
src/filesystem/: memory.rs  mod.rs  physical.rs  staging.rs
src/format/: escaping.rs  mod.rs  parse.rs  types.rs
src/matcher/: grep.rs  mod.rs  regex.rs  stub.rs
src/walker/: ignore_walker.rs  mod.rs  simple.rs
