[package]
name = "bulked"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace", "std"] }
clap = { version = "4.5", features = ["derive"] }
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["alloc"] }
vfs = "0.12"  # Virtual filesystem abstraction
grep = "0.3"  # Facade for grep-matcher, grep-regex, grep-searcher
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
