[package]
name = "bulked"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace", "std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.228",  features = ["derive"] }
serde_json = { version = "1.0.145", features = ["alloc"] }
grep = "0.4"  # Facade for grep-matcher, grep-regex, grep-searcher
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
aho-corasick = "1.1.4"
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0"
nom = "8.0.0"
atty = "0.2.14"
memmap2 = "0.9.9"
csv = "1.4.0"
